Set up a page when the token could not be validated.